Complete the QueryTree javadoc